# gm

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  gm_help.ini
.tx/: config
data/: Makefile.am  gm.ini
debian/: Xsession  changelog  control  cur-user  gm.dirs  gm.install  rules
help/gm/cs/: gm1.help  gm2.help  gm3.help  gm4.help  gm5.help  gm6.help  index.help
help/gm/de/: gm1.help  gm2.help  gm3.help  gm4.help  gm5.help  gm6.help  index.help
help/gm/en/: gm1.help  gm2.help  gm3.help  gm4.help  gm5.help  gm6.help  index.help
help/gm/es/: gm1.help  gm2.help  gm3.help  gm4.help  gm5.help  gm6.help  index.help
help/gm/ru/: gm1.help  gm2.help  gm3.help  gm4.help  gm5.help  gm6.help
help/gm/uk/: gm1.help  gm2.help  gm3.help  gm4.help  gm5.help  gm6.help  index.help
help/gm/zh_CN/: gm1.help  gm2.help  gm3.help  gm4.help  gm5.help  gm6.help  index.help
po/: Makefile.am  POTFILES  be.po  bg.po  ca.po  cs.po  de.po  en.po  es.po  fr.po  gm.pot  hu.po  it.po  ja.po  lv.po  nl.po  pl.po  ro.po  ru.po  sv.po  ua.po  uk.po  zh_CN.po
src/: Makefile.am  apps.c  apps.h  apps_cleanup.c  apps_cleanup.h  battery.c  choices.c  choices.h  clock.c  clock.h  datetime.c  gm-configlet.h  gm.c  gm.h  graph.c  graph.h  help.c  help.h  lang.c  lang.h  raise.c  raise.h  rotation.c  rotation.h  run.c  run.h  screen_autorefresh_control.c  screen_update_control.c  screen_update_control.h  setup-gettext.c  setup.c  setup.h  sock.c  sock.h  sound_control.c  sound_control.h  user.c  user.h  version.c
themes/: Makefile.am  echoicebox.edci  gm-items.edc  gm.edc  gm.edj  items.edc  items.edj  settings1.edc  settings1.edj  settings2.edc  settings2.edj
themes/azbooka/: Makefile.am  gm-items.edc  gm.edc
themes/default/: Makefile.am  gm-items.edc  gm-scalable.edc  gm.edc
